agregamos el ahoracdito al main

--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
         </div>
       </a>
 
+      <a class="t1" href="./juegos/ahoracadito/index.html">
+        <div class="card text-start">
+          <img class="card-img-top" src="./img/ahoracala.png" alt="Title">
+          <div class="card-body">
+            <h4 class="card-title">JUEGO DE AHORCADITO</h4>
+            <p class="card-text">ya sabes como se juega , te animas ¿? </p>
+          </div>
+        </div>
+      </a>
 
     </div>
 
