lo q hiciomos con los pibes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="#contacto">contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#qs">Quines Somos?</a>
+              <a class="nav-link" href="#qs">Quines Somos</a>
             </li>
           </ul>
         </div>
@@ -138,7 +138,7 @@
 
     <!-- quines somos  -->
     <div class="container" id="qs">
-      <h1 class="t3">¿Quienes Somos?</h1>
+      <h1 class="t3">Quienes Somos</h1>
       <h3 class="t3">"Un buen desarrollador de software trabaja con disciplina y constancia desde el primer día. "</h3>
 
       <div class="row md-3">
